build-zip stage of pipeline should also run when tag is added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ workflows:
       - build-zip:
           filters:
             tags:
-              ignore: /.*/
+              only: /^v.*/
             branches:
               ignore: main
 
